k8s-deployment/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: files-deployment
  labels:
    app: files
spec:
  selector:
    matchLabels:
      app: files
  template:
    metadata:
      labels:
        app: files
    spec:
      containers:
        - image: registry.gitlab.com/brandonfox/backend_final_project/files
          imagePullPolicy: "Always"
          name: files-deployment
          volumeMounts:
            - name: azurefileshare
              mountPath: /home/node/code/uploads
          ports:
            - containerPort: 4000
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
        - name: azurefileshare
          azureFile:
            secretName: azure-secret
            shareName: files-k8s
            readOnly: false
status: {}
