k8s-deployment/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: files
  name: files-service
spec:
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
  selector:
    app: files
  type: LoadBalancer
