k8s-deployment/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend-deployment
    labels:
        app: frontend
spec:
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            volumes:
                -   name: frontend-config
            containers:
            -   name: frontend-deployment-server
                image: registry.gitlab.com/brandonfox/backend_final_project/frontend
                imagePullPolicy: Always
                ports:
                -   containerPort: 80
                volumeMounts:
                -   name: frontend-config
                    mountPath: /usr/share/nginx/html/config.js
                    subPath: config.js
