k8s-deployment/oauth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth-service
  labels:
    app: oauth
spec:
  ports:
  - port: 3333
    targetPort: 3000
    protocol: TCP
  selector:
    app: oauth
