k8s-deployment/session-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: sessions-socket-deployment
    labels:
        app: sessions
spec:
    replicas: 3
    selector:
        matchLabels:
            purpose: sessions
    template:
        metadata:
            labels:
                purpose: sessions
        spec:
            containers:
            -   name: sessions-socket-server
                image: registry.gitlab.com/brandonfox/backend_final_project/sessions
                imagePullPolicy: Always
                env:
                -   name: REDIS_HOST
                    value: redis-master
                -   name: CORS_ALLOW
                    value: natwit442.xyz
                ports:
                -   containerPort: 3000
