k8s-deployment/session-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sessions-socket-service
  labels:
    purpose: sessions
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    beta.cloud.google.com/backend-config: '{"ports": {"80":"session-backend-config"}}'
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: NodePort
  selector:
    purpose: sessions
